# new-yml-api

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_README.md  FIXES_CHECKLIST.md  FIX_SUMMARY.md  IMPROVEMENTS.md  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  SELF_TEST_REPORT.md  UPDATE_NOTES.md  VERIFICATION_REPORT.md  ai_tester.py  allure_report_demo.html  allure_reporter.py  comprehensive_test.py  comprehensive_test.yaml  concurrent_runner.py  config.py  config_manager.py  context.py  create_function.py  data_driven.py  db.py  default_test.yaml  enhanced_validation.py  error_handler.py  exceptions.py  extract.py  hook_manager.py  http_client.py  local_test.yaml  logging_config.py  my_builtins.py  openapi_spec.json  performance_config.py  performance_test.py  project_generator_methods.py  (+51 more)
.claude/: settings.local.json
api_test_framework/: __init__.py  cli.py
api_test_project/: run.py
api_test_project/config/: environments.yaml  test_config.yaml
api_test_project/data/: test_data.yaml  test_file.txt
api_test_project/tests/: api_tests.yaml
api_test_project/utils/: helpers.py
examples/: enhanced_test_example.py  enhanced_yaml_test.yaml
shell/: __init__.py  commands.py  project_generator.py
test_project/: README.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_config_manager.py  test_example.py  test_security.py  test_validate.py
tests_archive/: README.md  add_copy_buttons.py  demo_allure_feature.py  diagnose_swagger_ui.py  final_address_verification.py  final_download_test.py  fix_emoji_encoding.py  fix_encoding.py  fix_requirements_encoding.py  fix_zip_extraction.py  quick_docs_test.py  quick_start.py  run_test_with_wait.py  simple_docs_test.py  simple_homepage_test.py  simple_project_generator.py  simple_server.py  simple_test_server.py  test_404_fixes.py  test_404_fixes_enhanced.py  test_address_fix.py  test_content_removal.py  test_content_removal_final.py  test_download_fix.py  test_encoding_fix.py  test_fixes.py  test_links_removal.py  test_menu_fix.py  test_navigation_cleanup.py  test_psutil_fix.py  test_syntax_fix.py  test_ui_changes.py  ultimate_zip_fix.py  verify_fix.py  verify_fixes.py  windows_compatibility_test.py
